# HCL4BNN

./: .gitignore  20251015_122612_log__Good_vs_Double_NN_128-16-128-2__inp-neur-wght_bits__7-2-2.pkl  BNN_MNIST_ilja.ipynb  BNN_minimal_neuron_ilja.ipynb  README.md  conf.py  deap_ga_experiment.ipynb  example_run.ipynb  example_run.py  mini_BNN_minimal_neuron.ipynb  mini_BNN_minimal_neuron.py  proc_log.py  pyproject.toml  requirements.txt  runs.py  sipm_signals.ipynb  test_nn.py
_build/doctrees/: environment.pickle  index.doctree
_build/html/: objects.inv  search.html  searchindex.js
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  usage.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt  usage.rst.txt
genetic_algorithm/: algorithm.py
notebooks/: deap_ga_experiment.ipynb  example_run.ipynb  example_run.py  experimental.ipynb  sipm_signals.ipynb
sipm_ga_nn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sipm_signals/: __init__.py  nn_cam.py  signals.py
src/: BNN_minimal_neuron.py  decode.py  genetic_algorithm.py  nn.py  sim_adc_input.py
src/datasets/: __init__.py  base_dataset.py  sipm_dataset.py  utils.py
src/genetic_algorithm/: __init__.py  algorithm.py  evaluation.py  statistics.py  toolbox_utils.py  utils.py
src/neural_network/: BNN.vhd  __init__.py  base_nn.py  binary_nn.py  signals.py  utils.py
src/sipm_signals/: __init__.py  individuals.py  input.py  nn_cam.py  nn_interface.py  signals.py  utils.py
