[project]
name = "HCL4BNN"
version = "0.1.0"
description = "LUT-based neural network optimized with a genetic algorithm (BNN)"
readme = "README.md"
authors = [
    {name = "Alperen Aksoy", email = "a.aksoy@fz-juelich.de"},
    {name = "Ilja Bekman", email = "i.bekman@fz-juelich.de"},
    {name = "Sarah Fleitmann", email = "s.fleitmann@fz-juelich.de"}
]
requires-python = ">=3.10"
keywords = ["sipm", "neural network", "genetic algorithm", "simulation", "bnn", "binarized neural network"]

# TODO:
#   classifiers
#   urls
#   license

dependencies = [
    "numpy>=1.26.2",
    "deap>=0.9.1",
    "python-dateutil>=2.7.0",
]

[project.optional-dependencies]
main = [
    "pandas>=2.3.3",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.9",
]
dev = [
    # pandas
    "ipykernel>=4.0.1",
    "ipython>=8.18",
    "scipy>=1.13",
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["neural_network*", "genetic_algorithm*", "datasets*"]
